--- a/TFE/Base.lproj/LaunchScreen.xib
+++ b/TFE/Base.lproj/LaunchScreen.xib
@@ -1,41 +1,66 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="460" height="720"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2014 SoloBando Enterprises. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="20" y="439" width="441" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TFE" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="20" y="140" width="441" height="43"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x46-Op-dLj">
+                    <rect key="frame" x="0.0" y="0.0" width="460" height="720"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Ynk-vR-A8n">
+                        <rect key="frame" x="0.0" y="0.0" width="460" height="720"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="B&amp;Wtreez" translatesAutoresizingMaskIntoConstraints="NO" id="eYd-7K-192">
+                                <rect key="frame" x="0.0" y="0.0" width="460" height="720"/>
+                            </imageView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HJf-S6-6r3">
+                                <rect key="frame" x="0.0" y="0.0" width="460" height="44"/>
+                                <color key="barTintColor" red="0.2221463685290245" green="0.72807633937007243" blue="0.62045224517354092" alpha="1" colorSpace="calibratedRGB"/>
+                                <items>
+                                    <navigationItem id="6AA-D7-u5F"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="HJf-S6-6r3" secondAttribute="trailing" id="5yC-mZ-fj5"/>
+                            <constraint firstAttribute="centerY" secondItem="eYd-7K-192" secondAttribute="centerY" id="6VK-ma-xbl"/>
+                            <constraint firstItem="eYd-7K-192" firstAttribute="leading" secondItem="Ynk-vR-A8n" secondAttribute="leading" id="8qZ-jt-33H"/>
+                            <constraint firstItem="eYd-7K-192" firstAttribute="top" secondItem="Ynk-vR-A8n" secondAttribute="top" id="BlZ-tD-2hq"/>
+                            <constraint firstAttribute="centerX" secondItem="eYd-7K-192" secondAttribute="centerX" id="EhC-he-vCW"/>
+                            <constraint firstAttribute="bottom" secondItem="eYd-7K-192" secondAttribute="bottom" id="V17-Ja-fBy"/>
+                            <constraint firstItem="HJf-S6-6r3" firstAttribute="leading" secondItem="Ynk-vR-A8n" secondAttribute="leading" id="dya-ec-omk"/>
+                            <constraint firstItem="HJf-S6-6r3" firstAttribute="top" secondItem="Ynk-vR-A8n" secondAttribute="top" id="e8V-Lb-V8r"/>
+                            <constraint firstAttribute="trailing" secondItem="eYd-7K-192" secondAttribute="trailing" id="uHF-52-dkM"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="6VK-ma-xbl"/>
+                                <exclude reference="EhC-he-vCW"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <blurEffect style="light"/>
+                </visualEffectView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
-                <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
-                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
-                <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstAttribute="bottom" secondItem="x46-Op-dLj" secondAttribute="bottom" id="BWH-X1-gKB"/>
+                <constraint firstAttribute="trailing" secondItem="x46-Op-dLj" secondAttribute="trailing" id="Kgz-D0-akz"/>
+                <constraint firstItem="x46-Op-dLj" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="gXg-ie-XgZ"/>
+                <constraint firstItem="x46-Op-dLj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="kQk-1z-ZNp"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="548" y="455"/>
+            <point key="canvasLocation" x="538" y="338"/>
         </view>
     </objects>
+    <resources>
+        <image name="B&amp;Wtreez" width="1379" height="2048"/>
+    </resources>
 </document>
